--- a/app/views/categories/dashboard.html.erb
+++ b/app/views/categories/dashboard.html.erb
@@ -88,7 +88,7 @@ window.onload = function () {
 	var chart1 = new CanvasJS.Chart("chartContainer", {
 		animationEnabled: true,
 		title:{
-			text: "Daily Articles Published/Started in <%= @category.name.capitalize %>".replace('amp;','')
+			text: "Daily Article Stats for <%= @category.name.capitalize %>".replace('amp;','')
 		},
 		axisX: {
 			valueFormatString: "MMM DD"
@@ -153,7 +153,7 @@ var chart2 = new CanvasJS.Chart("chartContainer1", {
 	animationEnabled: true,
 	theme: "light1", // "light1", "light2", "dark1", "dark2"
 	title:{
-		text: "Published Articles in <%= @category.name.capitalize %>".replace("amp;", "")
+		text: "Published in <%= @category.name.capitalize %>".replace("amp;", "")
 	},
 	axisY: {
 		title: "# Published articles"
