--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,6 +1,20 @@
 // Place all the styles related to the categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.menu-links .list-group-item {
+  padding: 14px 10px;
+  a {
+    font-size: 16px;
+    text-decoration: underline;
+    &:hover {
+      text-decoration: underline !important;
+    }
+  }
+  .link_light {
+    opacity: 0.5;
+  }
+}
+
 @media (max-width: 590px) {
   .chart-card {
     margin: 0 !important;
