--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -49,7 +49,7 @@ pintrk('track', 'pagevisit');
         <div class="hide spinner-button spinner-border" style="margin-left: 40%" role="status">
           <span class="sr-only">Loading...</span>
         </div>
-        <%= f.button "Submit Application", class: "newpost--new--profile mr-0 mb-0 pl-4 pr-4 submit_modal", id: "submit-application" %>
+        <%= f.button "Send Application", class: "newpost--new--profile mr-0 mb-0 pl-4 pr-4 submit_modal", id: "submit-application" %>
       </div>
     <% end %>
   </div>
