--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
 
     <span>Applications are competitive and are accepted on a rolling basis. If accepted, you will recieve an email from our team of editors within three business days.</span>
     <br /><br />
-    <%= f.submit 'Submit Application' %>
+    <%= f.submit 'Send Application' %>
   <% end %>
   <br>
   <br>
