--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -57,7 +57,7 @@
           <span class="sr-only">Loading...</span>
         </div>
         <span data-toggle="tooltip" title="You have already submitted an application through this link">
-          <%= f.button "Submit Application", class: "newpost--new--profile mb-0 mr-0 pl-4 pr-4 submit_modal #{@disabled}", id: "submit-application" %>
+          <%= f.button "Send Application", class: "newpost--new--profile mb-0 mr-0 pl-4 pr-4 submit_modal #{@disabled}", id: "submit-application" %>
         </span>
       </div>
     <% end %>
