--- a/app/views/applies/editor.html.erb
+++ b/app/views/applies/editor.html.erb
@@ -99,7 +99,7 @@
           <span class="sr-only">Loading...</span>
         </div>
         <span data-toggle="tooltip" title="<% if current_user.editor %>You are already an editor<% end %>">
-          <%= f.button "Submit Application", class: "newpost--new--profile mb-0 mr-0 pl-4 pr-4 submit_modal #{@disabled}", id: "submit-application" %>
+          <%= f.button "Send Application", class: "newpost--new--profile mb-0 mr-0 pl-4 pr-4 submit_modal #{@disabled}", id: "submit-application" %>
         </span>
       </div>
     <% end %>
